samples/_failures_safe/1761652780_331b53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33664aae.c: In function ‘main’:
./samples/SAFE/__tmp_33664aae.c:197:9: error: expected declaration or statement at end of input
  197 |         fprintf(stderr, "No tokens found\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_33664aae.c:197:9: error: expected declaration or statement at end of input
